--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,6 +11,8 @@
     <title>Astro</title>
   </head>
   <body>
+	<a href="/about">About</a>
+	<a href="/blog">Blog</a>
     <h1>Astro</h1>
     <h1>My Astro Site</h1>
   </body>
